[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://BoardPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://Space.tscn" type="PackedScene" id=4]
[ext_resource path="res://Roboto/Roboto-Black.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]

size = 192
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="ProceduralSky" id=1]

radiance_size = 4
sky_top_color = Color( 0.0470588, 0.454902, 0.976471, 1 )
sky_horizon_color = Color( 0.556863, 0.823529, 0.909804, 1 )
sky_curve = 0.25
sky_energy = 1.0
ground_bottom_color = Color( 0.101961, 0.145098, 0.188235, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
ground_energy = 1.0
sun_color = Color( 1, 1, 1, 1 )
sun_latitude = 120.78
sun_longitude = -34.3
sun_angle_min = 1.0
sun_angle_max = 100.0
sun_curve = 0.05
sun_energy = 16.0
texture_size = 2
_sections_unfolded = [ "Ground", "Sky", "Sun" ]

[sub_resource type="Environment" id=2]

background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0, 0, 0, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = true
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 2
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Players" type="Node" parent="." index="0"]

[node name="BoardPlayer1" parent="Players" index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.04544, 0.0216055 )

[node name="Board" parent="." index="1" instance=ExtResource( 3 )]

[node name="Spaces" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="Space" parent="Spaces" index="0" instance=ExtResource( 4 )]

transform = Transform( 0.999943, 0, 0.0106346, 0, 1, 0, -0.0106346, 0, 0.999943, 0, 0.0457604, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Space2" parent="Spaces" index="1" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.69608, 0.0457604, 2.07986 )

[node name="Space3" parent="Spaces" index="2" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.77111, 0.0457604, -0.291738 )
_sections_unfolded = [ "Transform" ]

[node name="Space4" parent="Spaces" index="3" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3563, 0.0457604, -3.28206 )

[node name="Space5" parent="Spaces" index="4" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3563, 0.0457604, -7.84602 )

[node name="Space6" parent="Spaces" index="5" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.15918, 0.0457604, -7.60143 )

[node name="Space7" parent="Spaces" index="6" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.13346, 0.0457604, -7.40847 )

[node name="Space8" parent="Spaces" index="7" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58192, 0.0457604, -7.40847 )

[node name="Space9" parent="Spaces" index="8" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.11937, 0.0457604, -4.47755 )

[node name="Space10" parent="Spaces" index="9" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.69497, 0, -0.720469 )

[node name="Space11" parent="Spaces" index="10" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.12966, 0, 3.09703 )

[node name="Space12" parent="Spaces" index="11" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.05588, 0, 6.75476 )

[node name="Camera" type="InterpolatedCamera" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 8.40779e-45, 0, -8.40779e-45, 1, 4.2039e-45, 2.04544, 11.1224 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
target = NodePath("../Players/BoardPlayer1")
speed = 1.0
enabled = false

[node name="DiceLabel" type="Label" parent="." index="4"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -111.0
margin_right = 111.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_fonts" ]

[node name="DiceTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="6"]

environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="7"]

transform = Transform( 0.711551, -0.394374, 0.581518, 0, 0.827626, 0.56128, -0.702634, -0.399379, 0.588899, 0, 7.61378, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Light", "Shadow" ]

[connection signal="timeout" from="DiceTimer" to="." method="_on_DiceTimer_timeout"]


